added courses business exception in the service layer
